# kp2bw

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
kp2bw/: bitwardenclient.py  cli.py  convert.py  kp2bw.py
kp2bw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
