[metadata]
name = kp2bw
version = 1.1
description= Imports and existing KeePass db with REF fields into Bitwarden,
long_description = file: README.md
author = Daniel Jampen
author_email = daniel@jampen.net
url = https://github.zhaw.ch/jampe/kp2bw

[options]
packages = kp2bw
install_requires = 
    pykeepass

[options.entry_points]
console_scripts =
    kp2bw = kp2bw.cli:main
